.config/relics/ernest/tests/snapshots/render__by-cohort.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  54.5%   (prose 272 / base 499 chars)
  docs prose 183 chars — 88.4% of source code

  total / cohort  density  prose  code  files
  total             54.5%    272   227      5
    source          30.1%     89   207      3
    docs            90.1%    183    20      2

  5 files measured, 2 unsupported (json 2)
