.config/relics/ernest/tests/snapshots/render__diff-by-cohort-file.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  75.3% -> 74.7%   (-0.6 pp,  prose -4 chars)
  docs prose 6 -> 118 chars — 15.0% -> 295.0% of source code

  total / cohort  density  pp delta  prose  prose delta
  total             74.7%      -0.6    118           -4
    source           0.0%     -74.4      0         -116
    docs           100.0%      +0.0    118         +112

  prose delta  density  file
         -116     0.0%  ./sample.php
         +112   100.0%  ./guide.md
