.config/relics/ernest/tests/snapshots/render__diff-quiet.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  75.3% -> 74.7%   (-0.6 pp,  prose -4 chars)
  docs prose 6 -> 118 chars — 15.0% -> 295.0% of source code
