.config/relics/ernest/tests/snapshots/render__edge.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  64.8%   (prose 79 / base 122 chars)

  total / cohort / language  provenance  density  prose  code  files
  total                                    64.8%     79    43      2
    source                                 64.8%     79    43      2
      css                    tracked       60.0%     57    38      1
      php                    tracked       81.5%     22     5      1

  2 files measured, 7 unsupported (vim 2, bin 1, log 1, map 1, +2 more)
  tests/render/edge/.ernestignore applied — 1 file excluded as a declared corpus
