.config/relics/ernest/tests/snapshots/render__empty.snap
---
source: ernest/tests/render.rs
expression: rendered
---
prose density  n/a   (no supported files found)

  0 files measured, 2 unsupported (json 2)
  --by file|section|cohort|language, --top N, --json
